--- a/plugin.xml
+++ b/plugin.xml
@@ -79,6 +79,7 @@
         <resource-file src="src/ios/GMImagePicker/fr.lproj" />
         <resource-file src="src/ios/GMImagePicker/it.lproj" />
         <resource-file src="src/ios/GMImagePicker/pt.lproj" />
+        <resource-file src="src/ios/GMImagePicker/pl.lproj" />
 
         <framework src="Accelerate.framework" />
         <framework src="Security.framework" />
