--- a/plugin.xml
+++ b/plugin.xml
@@ -27,10 +27,10 @@
                 <param name="ios-package" value="SOSPicker"/>
             </feature>
         </config-file>
-        
+
         <preference name="PHOTO_LIBRARY_USAGE_DESCRIPTION" default=" " />
         <config-file target="*-Info.plist" parent="NSPhotoLibraryUsageDescription">
-            <string>$PHOTO_LIBRARY_USAGE_DESCRIPTION</string>
+          <string>$PHOTO_LIBRARY_USAGE_DESCRIPTION</string>
         </config-file>
 
         <header-file src="src/ios/SOSPicker.h" />
@@ -80,6 +80,7 @@
         <resource-file src="src/ios/GMImagePicker/it.lproj" />
         <resource-file src="src/ios/GMImagePicker/pt.lproj" />
         <resource-file src="src/ios/GMImagePicker/pl.lproj" />
+        <resource-file src="src/ios/GMImagePicker/zh-Hans.lproj" />
 
         <framework src="Accelerate.framework" />
         <framework src="Security.framework" />
@@ -142,7 +143,7 @@
         <source-file src="src/android/Library/res/values-ja/multiimagechooser_strings_ja.xml" target-dir="res/values-ja"/>
         <source-file src="src/android/Library/res/values-ko/multiimagechooser_strings_ko.xml" target-dir="res/values-ko"/>
         <source-file src="src/android/Library/res/values-pl/multiimagechooser_strings_pl.xml" target-dir="res/values-pl"/>
-    
+
         <framework src="src/android/ignorelinterrors.gradle" custom="true" type="gradleReference"/>
         <framework src="src/android/androidtarget.gradle" custom="true" type="gradleReference"/>
     </platform>
